# deep-prospecting-engine

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.full  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/project/[projectId]/: page.tsx
frontend/src/app/project/new/: page.tsx
frontend/src/app/prospect/[runId]/: page.tsx
frontend/src/app/prospect/new/: page.tsx
frontend/src/components/: iterate-dialog.tsx  iteration-timeline.tsx  pipeline-progress.tsx  project-card.tsx  project-notes.tsx  run-card.tsx  saved-plays-list.tsx  sidebar.tsx  theme-provider.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts  utils.ts
src/: app.py  config.py
src/api/: __init__.py  main.py  models.py  project_store.py  run_store.py
src/db/: engine.py  models.py
src/graph/: state.py  workflow.py
src/graph/nodes/: __init__.py  asset_generator.py  competitor_scout.py  context_merger.py  deep_research.py  ideation.py  input_processor.py
src/memory/: chroma_query.py  chroma_store.py
src/prompts/: base_research.py  ideation.py  pellera_voice.py
tests/: conftest.py  test_api.py  test_asset_generator.py  test_competitor_scout.py  test_context_merger.py  test_deep_research.py  test_ideation.py  test_input_processor.py  test_memory.py  test_workflow.py
